@@ -420,6 +420,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 6170) Update for Kashubian translation (csb)
 * (bug 6191) Update to Indonesian translation (id) #18
 * (bug 6114) Update to Walloon localization (wa)
+* Added $wgNamespaceRobotPolicies to allow customisation of robot policies on a 
+  per-namespace basis.
 
 == Compatibility ==
 
